--- a/web/app/src/index.html
+++ b/web/app/src/index.html
@@ -8,15 +8,44 @@
     <title>Flexpool SOLO</title>
   </head>
   <body>
-    <!-- Image and text -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">
         <span class="logo-wrapper">
           <img src="assets/logo.svg" width="30" height="30"
             class="d-inline-block align-top" alt="Flexpool Logo" loading="lazy">
         </span>
-        <span class="ml-2">Flexpool SOLO</span>
+        <span class="ml-2" class="font-weight-bold">Flexpool SOLO</span>
       </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blocks & Shares</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Node</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#"
+              id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Dropdown link
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </nav>
   </body>
 </html>
