--- a/web/app/public/index.html
+++ b/web/app/public/index.html
@@ -7,7 +7,7 @@
 
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
