--- a/web/app/public/index.html
+++ b/web/app/public/index.html
@@ -7,19 +7,19 @@
 
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    </head>
-    <body>
-      <noscript>
-        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
-            work properly without JavaScript enabled. Please enable it to
-            continue.</strong>
-        </noscript>
-        <div id="app"></div>
-        <!-- built files will be auto injected -->
-      </body>
-    </html>
+    <title>Flexpool SOLO</title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but this website doesn't
+        work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
